Add tg bot runner (#3)
